# aoc2024

./: .gitignore  CMakeLists.txt  Makefile  README.md
day1/: solution.cpp
day10/: solution.cpp
day11/: solution.cpp
day12/: solution.cpp
day13/: solution.cpp
day14/: solution.cpp
day15/: solution.cpp
day16/: solution.cpp
day17/: solution.cpp
day2/: solution.cpp
day3/: solution.cpp
day4/: solution.cpp
day5/: solution.cpp
day6/: solution.cpp
day7/: solution.cpp
day8/: solution.cpp
day9/: solution.cpp
helpers/: get_input_day_x.cpp  helpers.cpp
include/: helpers.hpp
templates/: day{x}.cpp
